2005-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/basic-gconf-app.rb: Fix a bug.
	* extconf.rb: Follow mkmf-gnome2.rb changes. 

2005-01-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgconf-client.c: GConf::Client.new is deprecated.
	Call rb_warn instead rb_warning. So it print warning message 
	everytime to call.

2004-09-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/gconf2.rb: Support GLib::Log.set_log_domain.
	Define GConf::LOG_DOMAIN.

2004-08-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgconf-error.c: Improved error handling.
	* sample/notify.rb: Removed.

2004-07-31  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgconf-client.c: Call rb_warning instead of rb_warn in
	GConf::Client.new. After next release, it will be rb_warn.

2004-07-03  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/simple-view.rb, simple-controller.rb, basic-gconf-app.rb: 
	Added by Giovanni Corriga.

2004-06-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgconf-client.c: Make GConf::Client#initialize/.new obsolete. 
	It will be removed until Ruby-GNOME2-1.0.0 released.
	Added GConf::Client.get_for_engine, GConf::Client.default
	instead of GConf::Client.new.
	Added GConf::Client#key_is_writable? by Giovanni Corriga.
	* sample/notify.rb, tests/test.rb, unittest.rb: 
	Use GConf::Client.default instead of GConf::Client.new.
	
2004-05-30  Giovanni Corriga <valkadesh@libero.it>

	* src/rbgconf.c: Fix a wrong definition of g_id_call.

2004-05-30  Pascal Terjan <pterjan@linuxfr.org>

	* src/rbgconf.h: Add "extern" definition to the g_id_call.

2004-04-08  Kazuhiro NISHIYAMA <zn@mbf.nifty.com>

	* src/rbgconf-client.c: Fix a RangeError of GConf::Client#notify_remove.

2004-03-21  Kazuhiro NISHIYAMA <zn@mbf.nifty.com>

	* src/rbgconf-entry.c, rbgconf-client.c: Fix a segfault of 
	GConf::Client#notify_add when GConf::Client#unset is called.

2004-03-14  Kazuhiro NISHIYAMA <zn@mbf.nifty.com>

	* src/rbgconf-util.c: Fix using array values, integer values.
	* tests/unittest.rb: Added. 