@@ -1,3 +1,8 @@
+2005-10-09  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* extconf.rb, src/rbgconf.c, src/rbgconf.h: 
+	Added GConf::BUILD_VERSION.
+
 2005-01-30  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* sample/basic-gconf-app.rb: Fix a bug.
@@ -130,7 +135,7 @@
 2002-11-17  Nikolai :: lone-star :: Weibull <lone-star@home.se>
 
 	* src/*.[ch]: Updated headers to be more CVS-like using $Author: mutoh $
-	and $Date: 2005/01/29 16:52:17 $ macros.
+	and $Date: 2005/10/08 18:15:17 $ macros.
 
 2002-11-14  Nikolai :: lone-star :: Weibull <lone-star@home.se>
 
